@@ -1,21 +1,19 @@
 package com.wemirr.platform.ai.core.assistant.service;
 
 import cn.hutool.core.collection.CollUtil;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.wemirr.framework.ai.core.provider.embedding.EmbeddingModelRegistry;
+import com.wemirr.framework.ai.core.rag.TranslationQueryTransformer;
 import com.wemirr.platform.ai.core.assistant.interfaces.ChatAssistant;
-import com.wemirr.platform.ai.core.provider.embedding.EmbeddingModelProviderRegistry;
 import com.wemirr.platform.ai.core.provider.graph.GraphContentRetriever;
 import com.wemirr.platform.ai.core.provider.graph.GraphRagService;
-import com.wemirr.platform.ai.core.provider.mcp.DynamicMcpToolProvider;
+import com.wemirr.platform.ai.core.provider.mcp.McpToolProviderFactory;
 import com.wemirr.platform.ai.core.provider.scoring.ScoringModelService;
 import com.wemirr.platform.ai.core.provider.text.TextModelService;
-import com.wemirr.platform.ai.core.provider.vectorStore.EnhancedVectorStoreFactory;
-import com.wemirr.platform.ai.core.rag.TranslationQueryTransformer;
+import com.wemirr.platform.ai.core.provider.vector.VectorStoreFactory;
 import com.wemirr.platform.ai.domain.entity.ChatAgent;
 import com.wemirr.platform.ai.domain.entity.KnowledgeBase;
-import com.wemirr.platform.ai.domain.entity.ModelConfig;
+import com.wemirr.platform.ai.domain.entity.ModelEntity;
 import com.wemirr.platform.ai.service.KnowledgeBaseService;
 import com.wemirr.platform.ai.service.ToolService;
 import dev.langchain4j.data.segment.TextSegment;
@@ -24,7 +22,6 @@ import dev.langchain4j.memory.chat.MessageWindowChatMemory;
 import dev.langchain4j.model.chat.ChatModel;
 import dev.langchain4j.model.chat.StreamingChatModel;
 import dev.langchain4j.model.embedding.EmbeddingModel;
-import dev.langchain4j.model.jina.JinaScoringModel;
 import dev.langchain4j.model.scoring.ScoringModel;
 import dev.langchain4j.rag.DefaultRetrievalAugmentor;
 import dev.langchain4j.rag.RetrievalAugmentor;
@@ -35,19 +32,14 @@ import dev.langchain4j.rag.content.injector.ContentInjector;
 import dev.langchain4j.rag.content.injector.DefaultContentInjector;
 import dev.langchain4j.rag.content.retriever.ContentRetriever;
 import dev.langchain4j.rag.content.retriever.EmbeddingStoreContentRetriever;
-import dev.langchain4j.rag.content.retriever.WebSearchContentRetriever;
 import dev.langchain4j.rag.query.Query;
 import dev.langchain4j.rag.query.router.DefaultQueryRouter;
-import dev.langchain4j.rag.query.router.LanguageModelQueryRouter;
 import dev.langchain4j.rag.query.router.QueryRouter;
 import dev.langchain4j.rag.query.transformer.CompressingQueryTransformer;
 import dev.langchain4j.rag.query.transformer.QueryTransformer;
 import dev.langchain4j.service.AiServices;
+import dev.langchain4j.service.tool.ToolProvider;
 import dev.langchain4j.store.embedding.EmbeddingStore;
-import dev.langchain4j.store.embedding.filter.Filter;
-import dev.langchain4j.model.scoring.ScoringModel;
-import dev.langchain4j.store.memory.chat.ChatMemoryStore;
-import dev.langchain4j.web.search.tavily.TavilyWebSearchEngine;
 import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
@@ -57,43 +49,39 @@ import org.springframework.context.ApplicationContext;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import static com.wemirr.platform.ai.core.constant.AiServiceConstants.DEFAULT_MAX_MESSAGES;
+
 /**
+ * AI助手服务
+ * <p>
+ * 负责创建不同类型的AI助手：
+ * <ul>
+ *   <li>普通记忆对话助手</li>
+ *   <li>RAG知识库对话助手</li>
+ *   <li>智能体助手（支持Tools和RAG）</li>
+ * </ul>
+ *
  * @author xJh
  * @since 2025/10/11
- * todo Langchain4j暂未集成稀疏向量用于多路检索
- **/
+ * @apiNote Langchain4j暂未集成稀疏向量用于多路检索
+ */
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class AssistantService {
 
-    private static final int DEFAULT_MAX_MESSAGES = 10;
-
     private final TextModelService textModelService;
-
-    private final ChatMemoryStore chatMemoryStore;
-
-    private final EnhancedVectorStoreFactory vectorStoreFactory;
-
+    private final VectorStoreFactory vectorStoreFactory;
     private final KnowledgeBaseService knowledgeBaseService;
-
-    private final EmbeddingModelProviderRegistry embeddingModelProviderRegistry;
-
+    private final EmbeddingModelRegistry embeddingModelRegistry;
     private final ApplicationContext applicationContext;
-
     private final ObjectMapper objectMapper;
-
-    private final Executor executor = Executors.newCachedThreadPool();
-
     private final ToolService toolService;
-
-    private final DynamicMcpToolProvider dynamicMcpToolProvider;
-
+    private final McpToolProviderFactory mcpToolProviderFactory;
     private final ScoringModelService scoringModelService;
 
     /**
@@ -104,17 +92,17 @@ public class AssistantService {
 
     /**
      * 创建普通记忆对话的 Assistant
-     * @param modelConfig 模型配置
+     * @param modelEntity 模型配置
      * @return ChatAssistant 实例
      */
-    public ChatAssistant createMemoryAssistant(ModelConfig modelConfig) {
+    public ChatAssistant createMemoryAssistant(ModelEntity modelEntity) {
 
-        ChatModel chatModel = textModelService.model(modelConfig);
-        StreamingChatModel streamModel = textModelService.streamModel(modelConfig);
+        ChatModel chatModel = textModelService.model(modelEntity);
+        StreamingChatModel streamModel = textModelService.streamModel(modelEntity);
 
         return AiServices.builder(ChatAssistant.class)
                 .chatModel(chatModel)
-                 .streamingChatModel(streamModel)
+                .streamingChatModel(streamModel)
                 .chatMemory(MessageWindowChatMemory.withMaxMessages(DEFAULT_MAX_MESSAGES))
                 .chatMemoryProvider(createMemoryProvider())
                 .build();
@@ -125,9 +113,9 @@ public class AssistantService {
      * 创建智能体对话助手 (支持Tools和RAG、MCP工具)
      */
     @SneakyThrows
-    public ChatAssistant createAgentAssistant(ChatAgent chatAgent, ModelConfig modelConfig, RagAssistantParams ragParams) {
-        ChatModel chatModel = textModelService.model(modelConfig);
-        StreamingChatModel streamModel = textModelService.streamModel(modelConfig);
+    public ChatAssistant createAgentAssistant(ChatAgent chatAgent, ModelEntity modelEntity, RagAssistantParams ragParams) {
+        ChatModel chatModel = textModelService.model(modelEntity);
+        StreamingChatModel streamModel = textModelService.streamModel(modelEntity);
 
         var builder = AiServices.builder(ChatAssistant.class)
                 .chatModel(chatModel)
@@ -136,84 +124,70 @@ public class AssistantService {
                 .chatMemoryProvider(createMemoryProvider());
 
         // Configure Tools
-        if (chatAgent.getTools() != null && !chatAgent.getTools().isEmpty()) {
-            List<String> toolNames = objectMapper.readValue(chatAgent.getTools(), new TypeReference<List<String>>() {});
-            if (toolNames != null && !toolNames.isEmpty()) {
-                List<Object> tools = toolNames.stream()
-                        .map(name -> {
-                            try {
-                                return applicationContext.getBean(name);
-                            } catch (Exception e) {
-                                log.warn("Tool bean not found: {}", name);
-                                return null;
-                            }
-                        })
-                        .filter(Objects::nonNull)
-                        .toList();
-                if (!tools.isEmpty()) {
-                    builder.tools(tools);
-                }
+        if (CollUtil.isNotEmpty(chatAgent.getTools())) {
+            List<Object> tools = chatAgent.getTools().stream()
+                    .map(name -> {
+                        try {
+                            return applicationContext.getBean(name);
+                        } catch (Exception e) {
+                            log.warn("Tool bean not found: {}", name);
+                            return null;
+                        }
+                    })
+                    .filter(Objects::nonNull)
+                    .toList();
+            if (!tools.isEmpty()) {
+                builder.tools(tools);
             }
         }
-        
-        // 配置 MCP 工具提供者
-        // 先设置智能体的 MCP 服务器配置
+
+        // 配置 MCP 工具提供者（使用工厂模式，避免 ThreadLocal 问题）
         if (chatAgent.getMcpServerIds() != null && !chatAgent.getMcpServerIds().isEmpty()) {
             try {
-                List<Long> mcpServerIds = objectMapper.readValue(chatAgent.getMcpServerIds(), new TypeReference<List<Long>>() {});
-                dynamicMcpToolProvider.setAgentMcpServerIds(mcpServerIds);
-                builder.toolProvider(dynamicMcpToolProvider);
+                List<Long> mcpServerIds = chatAgent.getMcpServerIds();
+                String sessionId = String.valueOf(System.currentTimeMillis());
+                ToolProvider mcpToolProvider = mcpToolProviderFactory.create(
+                        chatAgent.getId(), mcpServerIds, sessionId);
+                if (mcpToolProvider != null) {
+                    builder.toolProvider(mcpToolProvider);
+                }
             } catch (Exception e) {
-                log.error("Failed to parse MCP server IDs for agent: {}", chatAgent.getId(), e);
+                log.error("Failed to configure MCP tool provider for agent: {}", chatAgent.getId(), e);
+                throw new IllegalArgumentException("MCP 工具提供者配置失败：" + e.getMessage(), e);
             }
         }
 
         //todo 如果没有预制系统预设，则使用默认。有的话使用系统预设
         builder.systemMessageProvider(memoryId -> {
             StringBuilder sb = new StringBuilder();
-
             // 基础角色预设 (用户配置的 "你是一个XX助手...")
-            if (StringUtils.isNotBlank(chatAgent.getAiSystemMessage())) {
-                sb.append(chatAgent.getAiSystemMessage()).append("\n\n");
+            if (StringUtils.isNotBlank(chatAgent.getSystemPrompt())) {
+                sb.append(chatAgent.getSystemPrompt()).append("\n\n");
             }
-
             // 能力自我认知增强
             sb.append("### 当前具备的能力\n");
-
             // RAG 能力
             if (ragParams != null) {
                 sb.append("- 【知识库】：我连接了专属知识库，可以检索文档并回答相关问题。\n");
             }
-
-            // Tools 能力 (利用 ToolService 获取描述)
-            if (chatAgent.getTools() != null) {
-                List<String> toolNames = null;
-                try {
-                    toolNames = objectMapper.readValue(chatAgent.getTools(), new TypeReference<List<String>>() {});
-                } catch (JsonProcessingException e) {
-                    throw new RuntimeException(e);
-                }
-                if (CollUtil.isNotEmpty(toolNames)) {
-                    sb.append("- 【工具箱】：我可以调用以下工具辅助回答：\n");
-                    // 获取所有工具的详细信息，找到匹配的并追加描述
-                    Map<String, ToolService.ToolDTO> toolMap = toolService.getTools().stream()
-                            .collect(Collectors.toMap(ToolService.ToolDTO::getBeanName, Function.identity()));
-
-                    for (String name : toolNames) {
-                        ToolService.ToolDTO tool = toolMap.get(name);
-                        if (tool != null && CollUtil.isNotEmpty(tool.getMethods())) {
-                            // 取第一个方法的描述作为工具描述（简化处理）
-                            String desc = tool.getMethods().get(0).getDescription();
-                            // 如果注解没写描述，就用方法名
-                            if (StringUtils.isBlank(desc)) {
-                                desc = tool.getMethods().get(0).getName();
-                            }
-                            sb.append(String.format("  * %s: %s\n", name, desc));
+            // Tools 能力
+            if (CollUtil.isNotEmpty(chatAgent.getTools())) {
+                sb.append("- 【工具箱】：我可以调用以下工具辅助回答：\n");
+                // 获取所有工具的详细信息，找到匹配的并追加描述
+                var toolMap = toolService.getTools().stream().collect(Collectors.toMap(ToolService.ToolDTO::getBeanName, Function.identity()));
+                for (String name : chatAgent.getTools()) {
+                    ToolService.ToolDTO tool = toolMap.get(name);
+                    if (tool != null && CollUtil.isNotEmpty(tool.getMethods())) {
+                        // 取第一个方法的描述作为工具描述（简化处理）
+                        String desc = tool.getMethods().getFirst().getDescription();
+                        // 如果注解没写描述，就用方法名
+                        if (StringUtils.isBlank(desc)) {
+                            desc = tool.getMethods().getFirst().getName();
                         }
+                        sb.append(String.format("  * %s: %s\n", name, desc));
                     }
                 }
             }
-
             sb.append("\n请根据上述能力回答用户的问题。当用户询问“你有什么功能”时，请基于以上信息进行总结。");
             return sb.toString();
         });
@@ -231,18 +205,35 @@ public class AssistantService {
      * 创建RAG的 Assistant
      */
     public ChatAssistant createMemoryRagAssistant(RagAssistantParams params) {
-        ChatModel chatModel = textModelService.model(params.getTextModelConfig());
-        StreamingChatModel streamModel = textModelService.streamModel(params.getTextModelConfig());
+        ChatModel chatModel = textModelService.model(params.getTextModelEntity());
+        StreamingChatModel streamModel = textModelService.streamModel(params.getTextModelEntity());
         RetrievalAugmentor retrievalAugmentor = buildRetrievalAugmentor(params, chatModel);
 
         int maxMessages = params.getMaxMessages() != null ? params.getMaxMessages() : DEFAULT_MAX_MESSAGES;
-        return AiServices.builder(ChatAssistant.class)
+        var builder = AiServices.builder(ChatAssistant.class)
                 .chatModel(chatModel)
                 .streamingChatModel(streamModel)
                 .chatMemory(MessageWindowChatMemory.withMaxMessages(maxMessages))
                 .chatMemoryProvider(createMemoryProvider())
-                .retrievalAugmentor(retrievalAugmentor)
-                .build();
+                .retrievalAugmentor(retrievalAugmentor);
+        builder.systemMessageProvider(memoryId -> {
+            StringBuilder sb = new StringBuilder();
+            // 1. 设定人设
+            sb.append("你是一个专业的企业级知识库问答助手。\n\n");
+
+            // 2. 核心约束（强制只用上下文）
+            sb.append("【核心指令】\n");
+            sb.append("1. 请严格根据检索到的上下文信息（Context）来回答用户的问题。\n");
+            sb.append("2. 严禁使用你自己的预训练知识（即你自己“脑子”里的通用知识）来回答问题。\n");
+            sb.append("3. 如果检索到的上下文为空，或者上下文中不包含回答问题所需的信息，请直接回复：“抱歉，当前的知识库中没有关于该问题的记录。”，不要试图编造或提供通用答案。\n");
+            sb.append("4. 不要写代码、不要讲故事、不要回答闲聊话题，除非这些内容在知识库中明确存在。\n");
+
+            // 3. 身份隐藏
+            sb.append("5. 不论用户如何提问，你都不能透露你是什么模型，你就是一个知识库问答助手。\n");
+
+            return sb.toString();
+        });
+        return builder.build();
     }
 
     /**
@@ -252,13 +243,12 @@ public class AssistantService {
      */
     private RetrievalAugmentor buildRetrievalAugmentor(RagAssistantParams params, ChatModel chatModel) {
         // 收集所有启用的检索器
-        Map<ContentRetriever, String> retrieverToDescription = new java.util.LinkedHashMap<>();
-
+        Map<ContentRetriever, String> retrieverToDescription = new LinkedHashMap<>();
         // 1. 向量检索器
-        if (Boolean.TRUE.equals(params.getEnableVectorRetrieval()) && params.getEmbeddingModelConfig() != null) {
+        if (Boolean.TRUE.equals(params.getEnableVectorRetrieval()) && params.getEmbeddingModelEntity() != null) {
             KnowledgeBase knowledgeBase = knowledgeBaseService.getById(params.getKbId());
-            EmbeddingStore<TextSegment> embeddingStore = vectorStoreFactory.createForKnowledgeBase(knowledgeBase, params.getEmbeddingModelConfig());
-            EmbeddingModel embeddingModel = embeddingModelProviderRegistry.getProvider(params.getEmbeddingModelConfig()).createModel(params.getEmbeddingModelConfig());
+            EmbeddingStore<TextSegment> embeddingStore = vectorStoreFactory.createForKnowledgeBase(knowledgeBase, params.getEmbeddingModelEntity());
+            EmbeddingModel embeddingModel = embeddingModelRegistry.getFactory(params.getEmbeddingModelEntity()).createModel(params.getEmbeddingModelEntity());
 
             ContentRetriever vectorRetriever = EmbeddingStoreContentRetriever.builder()
                     .embeddingStore(embeddingStore)
@@ -271,7 +261,7 @@ public class AssistantService {
         }
 
         // 2. 图谱检索器
-        if (params.getEnableGraphRetrieval() && graphRagService != null) {
+        if (params.getEnableGraphRetrieval() != null && params.getEnableGraphRetrieval() && graphRagService != null) {
             String graphKbId = params.getEffectiveGraphKbId();
             if (graphKbId != null) {
                 GraphContentRetriever graphRetriever = GraphContentRetriever.builder()
@@ -308,6 +298,7 @@ public class AssistantService {
 
         // 构建 ContentAggregator：根据配置决定是否启用重排序
         ContentAggregator contentAggregator = buildContentAggregator(params);
+        //TODO自定义提示词
         ContentInjector contentInjector = new DefaultContentInjector();
 
         return DefaultRetrievalAugmentor.builder()
@@ -315,7 +306,8 @@ public class AssistantService {
                 .queryRouter(queryRouter)
                 .contentAggregator(contentAggregator)
                 .contentInjector(contentInjector)
-                .executor(executor)
+                // 使用虚拟线程执行器
+                .executor(Executors.newVirtualThreadPerTaskExecutor())
                 .build();
     }
 
@@ -330,23 +322,23 @@ public class AssistantService {
             return new DefaultContentAggregator();
         }
 
-        ModelConfig rerankConfig = params.getRerankModelConfig();
+        ModelEntity model = params.getRerankModelEntity();
 
         // 检查 API Key
-        if (StringUtils.isBlank(rerankConfig.getApiKey())) {
+        if (StringUtils.isBlank(model.getApiKey())) {
             log.warn("重排序模型 API Key 未配置，降级使用默认聚合器");
             return new DefaultContentAggregator();
         }
 
         try {
             // 通过 ScoringModelService 获取重排序模型（支持 Jina、Cohere 等）
-            ScoringModel scoringModel = scoringModelService.getModel(rerankConfig);
+            ScoringModel scoringModel = scoringModelService.getModel(model);
 
             int maxResults = params.getRerankMaxResults() != null ? params.getRerankMaxResults() : 5;
             double minScore = params.getRerankMinScore() != null ? params.getRerankMinScore() : 0.5;
 
             log.info("启用重排序: provider={}, model={}, maxResults={}, minScore={}",
-                    rerankConfig.getProvider(), rerankConfig.getModelName(), maxResults, minScore);
+                    model.getProvider(), model.getName(), maxResults, minScore);
 
             return ReRankingContentAggregator.builder()
                     .scoringModel(scoringModel)
@@ -361,17 +353,18 @@ public class AssistantService {
 
     /**
      * 创建记忆提供者
+     * <p>
+     * 注意：这里使用内存版 ChatMemoryStore，消息持久化由 ConversationMessageService 负责
+     * 避免与 PersistentMySqlChatMemoryStore 产生重复保存
      */
     private ChatMemoryProvider createMemoryProvider() {
-//        ChatMemoryStore memoryStore = new PersistentMySqlChatMemoryStore(chatMsgMapper);
         return memoryId -> MessageWindowChatMemory.builder()
                 .id(memoryId)
                 .maxMessages(DEFAULT_MAX_MESSAGES)
-                .chatMemoryStore(chatMemoryStore)
+                // 使用内存存储，避免与 ConversationMessageService 重复保存
+                // .chatMemoryStore(chatMemoryStore)
                 .build();
     }
-
-
 
 
 }
